<?xml version="1.0"?>
<package>
  <name>parameter_pa</name>
  <version>0.0.1</version>
  <description>The proaut_parameter package</description>

  <maintainer email="wepet@hrz.tu-chemnitz.de">wepet</maintainer>

  <license>other</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>eigen</run_depend>

</package>
