<?xml version="1.0"?>
<package format="2">
  <name>parameter_pa</name>
  <version>0.0.1</version>
  <description>The proaut_parameter package</description>

  <maintainer email="wepet@hrz.tu-chemnitz.de">wepet</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>cmake_modules</depend>
  <depend>eigen</depend>

  <doc_depend>doxygen</doc_depend>

</package>
